--- a/public/css/app.css
+++ b/public/css/app.css
@@ -23,7 +23,7 @@
 
 .colorfondo
 {
-	background-color: #fffffe;
+	background-color: #f4fffe;
 }
 
 .menulateral
@@ -101,3 +101,51 @@ p.texto-menulateral
 	border-radius:20px;
 }
 
+.tam
+{
+	width: 150px;
+}
+
+.footer
+{
+	margin-top: 20px;
+	bottom: 0;
+	z-index: 1030;
+	width: 100%;
+	height: 60px;
+	background-color: #f5f5f5;
+	border: 1px solid #d8d8d8;
+	border-top-width: 2px;
+	opacity: 0.7;
+}
+
+.contenedor-footer
+{
+	margin: auto;
+}
+
+.contenedor-footer .creditos {
+	margin: 20px 0;
+}
+.texto-callado {
+	color: #999999;
+}
+.banner_header
+{
+	height: 230px;
+	width: 100%;
+}
+
+.logo_header
+{
+	height: 180px;
+	width: 180px;
+	float:left;	
+	top:25px;
+	left:5px;
+	border: 10px solid #2980b9;
+	opacity:0.7;
+	border-radius:10px;
+	position:absolute;
+	background: #f4fffe;
+}
