--- a/public/css/app.css
+++ b/public/css/app.css
@@ -5,8 +5,7 @@
 
 .margenformulario
 {
-	margin-top: 5px;
-	margin-bottom: 5px;
+	margin-top: 10px;
 }
 
 .contenedor
@@ -17,7 +16,7 @@
 
 .menu{
   color: #fff;
-  background-color: #5cb85c;
+  background-color: #2980b9;
   border-color: #4cae4c;
 }
 
@@ -106,35 +105,33 @@ p.texto-menulateral
 	width: 150px;
 }
 
+
+.texto-callado {
+	color: #999999;
+}
+
 .footer
 {
-	margin-top: 20px;
-	bottom: 0;
-	z-index: 1030;
-	width: 100%;
-	height: 60px;
-	background-color: #f5f5f5;
-	border: 1px solid #d8d8d8;
-	border-top-width: 2px;
-	opacity: 0.7;
+  margin-top: 20px;
+  bottom: 0;
+  z-index: 1030;
+  width: 100%;
+  height: auto;
+  background-color: #f5f5f5;
+  border: 1px solid #d8d8d8;
+  border-top-width: 2px;
+  opacity: 0.7;
 }
 
 .contenedor-footer
 {
-	margin: auto;
+  margin: auto;
 }
 
 .contenedor-footer .creditos {
-	margin: 20px 0;
+  margin: 20px 0;
 }
-.texto-callado {
-	color: #999999;
-}
-.banner_header
-{
-	height: 230px;
-	width: 100%;
-}
+
 
 .logo_header
 {
@@ -151,4 +148,190 @@ p.texto-menulateral
 .texto_header
 {
 	text-align: right;
+  bottom: 10px;
 }
+
+
+.texto_headerbanner
+{
+	text-align: right;
+	margin-right: -100px;
+  font-size: 22px;
+  color: #34495e;
+  font-weight: normal;
+  line-height: 25px;
+  letter-spacing: -1px;
+}
+
+.texto_banner1
+{
+  text-align: center;
+  margin-right: -70px;
+  font-size: 22px;
+  color: #34495e;
+  font-weight: normal;
+  letter-spacing: -1px;
+
+}
+
+
+
+
+/* BOOTSTRAP 3.x PAGINA DE INICIO
+-------------------------------------------------- */
+
+
+
+/* CUSTOMIZE THE NAVBAR
+-------------------------------------------------- */
+
+/* Special class on .container surrounding .navbar, used for positioning it into place. */
+.navbar-wrapper {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 10;
+
+}
+
+
+/* CUSTOMIZE THE CAROUSEL
+-------------------------------------------------- */
+
+/* Carousel base class */
+.carousel {
+  
+}
+/* Since positioning the image, we need to help out the caption */
+.carousel-caption {
+  z-index: 1;
+
+}
+
+/* Declare heights because of positioning of img element */
+.carousel .item {
+  height: 540px;
+  background-color:#555;
+}
+.carousel img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  min-height: 400px;
+}
+
+
+
+/* MARKETING CONTENT
+-------------------------------------------------- */
+
+/* Pad the edges of the mobile views a bit */
+.marketing {
+  padding-top: 5px;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+/* Center align the- text within the three columns below the carousel */
+.marketing .col-lg-4 {
+  text-align: center;
+  margin-bottom: 10px;
+}
+.marketing h3 {
+  font-family: arial;
+  font-size: 20px;
+  color: #f39c12;
+  font-weight: normal;
+}
+
+.marketing .col-lg-4 p {
+  margin-left: 5px;
+  margin-right: 5px;
+}
+
+
+/* Featurettes
+------------------------- */
+
+.featurette-divider {
+  margin: 80px 0px; /* Space out the Bootstrap <hr> more */
+}
+
+.featurette {
+  padding-top: 120px; /* Vertically center images part 1: add padding above and below text. */
+  overflow: hidden; /* Vertically center images part 2: clear their floats. */
+}
+.featurette-image {
+  margin-top: 10px; /* Vertically center images part 3: negative margin up the image the same amount of the padding to center it. */
+  height: 140px;
+  width: 300px;
+  margin-bottom: 15px;
+}
+
+/* Give some space on the sides of the floated elements so text doesn't run right into it. */
+.featurette-image.pull-left {
+  margin-right: 40px;
+}
+.featurette-image.pull-right {
+  margin-left: 40px;
+}
+
+/* Thin out the marketing headings */
+.featurette-heading { 
+  font-size: 22px;
+  color: #3B88B6;
+  font-weight: normal;
+  line-height: 25px;
+  letter-spacing: -1px;
+}
+
+/* encabezado principal features */
+.featurette-encabezadoprincipal {
+  font-family: trebuchet;
+  font-size: 19px;
+  color: #3B88B6;
+}
+
+/* encabezado principal features */
+.featurette-desarrolladores {
+  font-family: verdana;
+  font-size: 30px;
+  color: #16a085;
+}
+
+
+/* SLIDER PASOS DE NOTIFICACION
+-------------------------------------------------- */
+
+
+
+
+/* RESPONSIVE CSS
+-------------------------------------------------- */
+
+@media (min-width: 768px) {
+
+  /* Remve the edge padding needed for mobile */
+  .marketing {
+    padding-left: 0;
+    padding-right: 0;
+  }
+
+  /* Navbar positioning foo */
+  .navbar-wrapper {
+    margin-top: 20px;
+    margin-bottom: -90px; /* Negative margin to pull up carousel. 90px is roughly margins and height of navbar. */
+  }
+  /* The navbar becomes detached from the top, so we round the corners */
+  .navbar-wrapper .navbar {
+    border-radius: 4px;
+  }
+
+  /* Bump up size of carousel content */
+  .carousel-caption p {
+    margin-bottom: 20px;
+    font-size: 21px;
+    line-height: 1.4;
+  }
+
