--- a/public/css/estilosFormulario.css
+++ b/public/css/estilosFormulario.css
@@ -11,7 +11,7 @@ body {
 }
 /*form styles*/
 #msform {
-	width: 900px;
+	max-width: 900px;
 	margin: 50px auto;
 	text-align: center;
 	position: relative;	
